--- a/locale/nl.po
+++ b/locale/nl.po
@@ -2133,306 +2133,6 @@ msgstr ""
 msgid "The following chapters have been created:"
 msgstr ""
 
-msgid "Front Matter"
-msgstr ""
-
-msgid "Genesis"
-msgstr "Genesis"
-
-msgid "Exodus"
-msgstr "Exodus"
-
-msgid "Leviticus"
-msgstr "Leviticus"
-
-msgid "Numbers"
-msgstr "Numeri"
-
-msgid "Deuteronomy"
-msgstr "Deuteronomium"
-
-msgid "Joshua"
-msgstr "Jozua"
-
-msgid "Judges"
-msgstr "Rechters"
-
-msgid "Ruth"
-msgstr "Ruth"
-
-msgid "1 Samuel"
-msgstr "1 Samuël"
-
-msgid "2 Samuel"
-msgstr "2 Samuël"
-
-msgid "1 Kings"
-msgstr "1 Koningen"
-
-msgid "2 Kings"
-msgstr "2 Koningen"
-
-msgid "1 Chronicles"
-msgstr "1 Kronieken"
-
-msgid "2 Chronicles"
-msgstr "2 Kronieken"
-
-msgid "Ezra"
-msgstr "Ezra"
-
-msgid "Nehemiah"
-msgstr "Nehemia"
-
-msgid "Esther"
-msgstr "Esther"
-
-msgid "Job"
-msgstr "Job"
-
-msgid "Psalms"
-msgstr "Psalmen"
-
-msgid "Proverbs"
-msgstr "Spreuken"
-
-msgid "Ecclesiastes"
-msgstr "Prediker"
-
-msgid "Song of Solomon"
-msgstr "Hooglied"
-
-msgid "Isaiah"
-msgstr "Jesaja"
-
-msgid "Jeremiah"
-msgstr "Jeremia"
-
-msgid "Lamentations"
-msgstr "Klaagliederen"
-
-msgid "Ezekiel"
-msgstr "Ezechiël"
-
-msgid "Daniel"
-msgstr "Daniël"
-
-msgid "Hosea"
-msgstr "Hosea"
-
-msgid "Joel"
-msgstr "Joël"
-
-msgid "Amos"
-msgstr "Amos"
-
-msgid "Obadiah"
-msgstr "Obadja"
-
-msgid "Jonah"
-msgstr "Jona"
-
-msgid "Micah"
-msgstr "Micha"
-
-msgid "Nahum"
-msgstr "Nahum"
-
-msgid "Habakkuk"
-msgstr "Habakuk"
-
-msgid "Zephaniah"
-msgstr "Sefanja"
-
-msgid "Haggai"
-msgstr "Haggai"
-
-msgid "Zechariah"
-msgstr "Zacharia"
-
-msgid "Malachi"
-msgstr "Maleachi"
-
-msgid "Matthew"
-msgstr "Matteüs"
-
-msgid "Mark"
-msgstr "Marcus"
-
-msgid "Luke"
-msgstr "Lucas"
-
-msgid "John"
-msgstr "Johannes"
-
-msgid "Acts"
-msgstr "Handelingen"
-
-msgid "Romans"
-msgstr "Romeinen"
-
-msgid "1 Corinthians"
-msgstr "1 Korintiërs"
-
-msgid "2 Corinthians"
-msgstr "2 Korintiërs"
-
-msgid "Galatians"
-msgstr "Galaten"
-
-msgid "Ephesians"
-msgstr "Efeziërs"
-
-msgid "Philippians"
-msgstr "Filippenzen"
-
-msgid "Colossians"
-msgstr "Kolossenzen"
-
-msgid "1 Thessalonians"
-msgstr "1 Tessalonicenzen"
-
-msgid "2 Thessalonians"
-msgstr "2 Tessalonicenzen"
-
-msgid "1 Timothy"
-msgstr "1 Timoteüs"
-
-msgid "2 Timothy"
-msgstr "2 Timoteüs"
-
-msgid "Titus"
-msgstr "Titus"
-
-msgid "Philemon"
-msgstr "Filemon"
-
-msgid "Hebrews"
-msgstr "Hebreeën"
-
-msgid "James"
-msgstr "Jakobus"
-
-msgid "1 Peter"
-msgstr "1 Petrus"
-
-msgid "2 Peter"
-msgstr "2 Petrus"
-
-msgid "1 John"
-msgstr "1 Johannes"
-
-msgid "2 John"
-msgstr "2 Johannes"
-
-msgid "3 John"
-msgstr "3 Johannes"
-
-msgid "Jude"
-msgstr "Judas"
-
-msgid "Revelation"
-msgstr "Openbaring"
-
-msgid "Back Matter"
-msgstr "Achterkant"
-
-msgid "Other Material"
-msgstr "Ander materiaal"
-
-msgid "Tobit"
-msgstr ""
-
-msgid "Judith"
-msgstr ""
-
-msgid "Esther (Greek)"
-msgstr ""
-
-msgid "Wisdom of Solomon"
-msgstr ""
-
-msgid "Sirach"
-msgstr ""
-
-msgid "Baruch"
-msgstr ""
-
-msgid "Letter of Jeremiah"
-msgstr ""
-
-msgid "Song of the Three Children"
-msgstr ""
-
-msgid "Susanna"
-msgstr ""
-
-msgid "Bel and the Dragon"
-msgstr ""
-
-msgid "1 Maccabees"
-msgstr ""
-
-msgid "2 Maccabees"
-msgstr ""
-
-msgid "1 Esdras"
-msgstr ""
-
-msgid "Prayer of Manasses"
-msgstr ""
-
-msgid "Psalm 151"
-msgstr ""
-
-msgid "3 Maccabees"
-msgstr ""
-
-msgid "2 Esdras"
-msgstr ""
-
-msgid "4 Maccabees"
-msgstr ""
-
-msgid "Daniel (Greek)"
-msgstr ""
-
-msgid "Introductions"
-msgstr ""
-
-msgid "Concordance"
-msgstr ""
-
-msgid "Glossary"
-msgstr ""
-
-msgid "Topical Index"
-msgstr ""
-
-msgid "Names Index"
-msgstr ""
-
-msgid "Extra A"
-msgstr ""
-
-msgid "Extra B"
-msgstr ""
-
-msgid "Extra C"
-msgstr ""
-
-msgid "Extra D"
-msgstr ""
-
-msgid "Extra E"
-msgstr ""
-
-msgid "Extra F"
-msgstr ""
-
-msgid "Extra G"
-msgstr ""
-
 msgid "Comparing Bibles"
 msgstr ""
 
@@ -10299,6 +9999,333 @@ msgstr ""
 msgid ""
 "Used for marking text which should be ignored when identifying or linking to "
 "cross reference target references."
+msgstr ""
+
+msgid "Genesis"
+msgstr "Genesis"
+
+msgid "Exodus"
+msgstr "Exodus"
+
+msgid "Leviticus"
+msgstr "Leviticus"
+
+msgid "Numbers"
+msgstr "Numeri"
+
+msgid "Deuteronomy"
+msgstr "Deuteronomium"
+
+msgid "Joshua"
+msgstr "Jozua"
+
+msgid "Judges"
+msgstr "Rechters"
+
+msgid "Ruth"
+msgstr "Ruth"
+
+msgid "1 Samuel"
+msgstr "1 Samuël"
+
+msgid "2 Samuel"
+msgstr "2 Samuël"
+
+msgid "1 Kings"
+msgstr "1 Koningen"
+
+msgid "2 Kings"
+msgstr "2 Koningen"
+
+msgid "1 Chronicles"
+msgstr "1 Kronieken"
+
+msgid "2 Chronicles"
+msgstr "2 Kronieken"
+
+msgid "Ezra"
+msgstr "Ezra"
+
+msgid "Nehemiah"
+msgstr "Nehemia"
+
+msgid "Esther"
+msgstr "Esther"
+
+msgid "Job"
+msgstr "Job"
+
+msgid "Psalms"
+msgstr "Psalmen"
+
+msgid "Proverbs"
+msgstr "Spreuken"
+
+msgid "Ecclesiastes"
+msgstr "Prediker"
+
+msgid "Song of Solomon"
+msgstr "Hooglied"
+
+msgid "Isaiah"
+msgstr "Jesaja"
+
+msgid "Jeremiah"
+msgstr "Jeremia"
+
+msgid "Lamentations"
+msgstr "Klaagliederen"
+
+msgid "Ezekiel"
+msgstr "Ezechiël"
+
+msgid "Daniel"
+msgstr "Daniël"
+
+msgid "Hosea"
+msgstr "Hosea"
+
+msgid "Joel"
+msgstr "Joël"
+
+msgid "Amos"
+msgstr "Amos"
+
+msgid "Obadiah"
+msgstr "Obadja"
+
+msgid "Jonah"
+msgstr "Jona"
+
+msgid "Micah"
+msgstr "Micha"
+
+msgid "Nahum"
+msgstr "Nahum"
+
+msgid "Habakkuk"
+msgstr "Habakuk"
+
+msgid "Zephaniah"
+msgstr "Sefanja"
+
+msgid "Haggai"
+msgstr "Haggai"
+
+msgid "Zechariah"
+msgstr "Zacharia"
+
+msgid "Malachi"
+msgstr "Maleachi"
+
+msgid "Matthew"
+msgstr "Matteüs"
+
+msgid "Mark"
+msgstr "Marcus"
+
+msgid "Luke"
+msgstr "Lucas"
+
+msgid "John"
+msgstr "Johannes"
+
+msgid "Acts"
+msgstr "Handelingen"
+
+msgid "Romans"
+msgstr "Romeinen"
+
+msgid "1 Corinthians"
+msgstr "1 Korintiërs"
+
+msgid "2 Corinthians"
+msgstr "2 Korintiërs"
+
+msgid "Galatians"
+msgstr "Galaten"
+
+msgid "Ephesians"
+msgstr "Efeziërs"
+
+msgid "Philippians"
+msgstr "Filippenzen"
+
+msgid "Colossians"
+msgstr "Kolossenzen"
+
+msgid "1 Thessalonians"
+msgstr "1 Tessalonicenzen"
+
+msgid "2 Thessalonians"
+msgstr "2 Tessalonicenzen"
+
+msgid "1 Timothy"
+msgstr "1 Timoteüs"
+
+msgid "2 Timothy"
+msgstr "2 Timoteüs"
+
+msgid "Titus"
+msgstr "Titus"
+
+msgid "Philemon"
+msgstr "Filemon"
+
+msgid "Hebrews"
+msgstr "Hebreeën"
+
+msgid "James"
+msgstr "Jakobus"
+
+msgid "1 Peter"
+msgstr "1 Petrus"
+
+msgid "2 Peter"
+msgstr "2 Petrus"
+
+msgid "1 John"
+msgstr "1 Johannes"
+
+msgid "2 John"
+msgstr "2 Johannes"
+
+msgid "3 John"
+msgstr "3 Johannes"
+
+msgid "Jude"
+msgstr "Judas"
+
+msgid "Revelation"
+msgstr "Openbaring"
+
+msgid "Front Matter"
+msgstr ""
+
+msgid "Back Matter"
+msgstr "Achterkant"
+
+msgid "Other Material"
+msgstr "Ander materiaal"
+
+msgid "Tobit"
+msgstr ""
+
+msgid "Judith"
+msgstr ""
+
+msgid "Esther (Greek)"
+msgstr ""
+
+msgid "Wisdom of Solomon"
+msgstr ""
+
+msgid "Sirach"
+msgstr ""
+
+msgid "Baruch"
+msgstr ""
+
+msgid "Letter of Jeremiah"
+msgstr ""
+
+msgid "Song of the Three Children"
+msgstr ""
+
+msgid "Susanna"
+msgstr ""
+
+msgid "Bel and the Dragon"
+msgstr ""
+
+msgid "1 Maccabees"
+msgstr ""
+
+msgid "2 Maccabees"
+msgstr ""
+
+msgid "1 Esdras (Greek)"
+msgstr ""
+
+msgid "Prayer of Manasses"
+msgstr ""
+
+msgid "Psalm 151"
+msgstr ""
+
+msgid "3 Maccabees"
+msgstr ""
+
+msgid "2 Esdras (Latin)"
+msgstr ""
+
+msgid "4 Maccabees"
+msgstr ""
+
+msgid "Daniel (Greek)"
+msgstr ""
+
+msgid "Odes"
+msgstr ""
+
+msgid "Psalms of Solomon"
+msgstr ""
+
+msgid "Ezra Apocalypse"
+msgstr ""
+
+msgid "5 Ezra"
+msgstr ""
+
+msgid "6 Ezra"
+msgstr ""
+
+msgid "Psalms 152-155"
+msgstr ""
+
+msgid "2 Baruch (Apocalypse)"
+msgstr ""
+
+msgid "Letter of Baruch"
+msgstr ""
+
+msgid "Jubilees"
+msgstr ""
+
+msgid "Enoch"
+msgstr ""
+
+msgid "1 Meqabyan/Mekabis"
+msgstr ""
+
+msgid "2 Meqabyan/Mekabis"
+msgstr ""
+
+msgid "3 Meqabyan/Mekabis"
+msgstr ""
+
+msgid "Reproof"
+msgstr ""
+
+msgid "4 Baruch"
+msgstr ""
+
+msgid "Letter to the Laodiceans"
+msgstr ""
+
+msgid "Introduction Matter"
+msgstr ""
+
+msgid "Concordance"
+msgstr ""
+
+msgid "Glossary / Wordlist"
+msgstr ""
+
+msgid "Topical Index"
+msgstr ""
+
+msgid "Names Index"
 msgstr ""
 
 msgid "No files in this folder"
