--- a/locale/es.po
+++ b/locale/es.po
@@ -619,6 +619,15 @@ msgstr ""
 msgid "The journal shows the progress."
 msgstr ""
 
+msgid "Would you like to change the stylesheet?"
+msgstr ""
+
+msgid "A stylesheet affects how the Bible text in the editor looks."
+msgstr ""
+
+msgid "Please make your choice below."
+msgstr ""
+
 msgid "More operations in the Cloud"
 msgstr ""
 
@@ -1536,12 +1545,6 @@ msgstr ""
 msgid "Upon encountering a certain marker"
 msgstr ""
 
-msgid "Styles"
-msgstr "Estilos"
-
-msgid "Would you like to switch to another stylesheet?"
-msgstr ""
-
 msgid "Style"
 msgstr "Estilo"
 
@@ -1670,6 +1673,9 @@ msgstr ""
 
 msgid "The marker is to be given without the backslash, e.g. \"zendnotes\"."
 msgstr ""
+
+msgid "Styles"
+msgstr "Estilos"
 
 msgid "This stylesheet already exists"
 msgstr ""
@@ -2051,9 +2057,6 @@ msgstr ""
 msgid "User-defined"
 msgstr ""
 
-msgid "Select stylesheet"
-msgstr ""
-
 msgid "Help and About"
 msgstr ""
 
@@ -2076,6 +2079,9 @@ msgid "Users"
 msgstr "Usuarios"
 
 msgid "Versifications"
+msgstr ""
+
+msgid "Select stylesheet"
 msgstr ""
 
 msgid "Edit stylesheet"
@@ -3703,16 +3709,6 @@ msgstr ""
 
 msgid "Delete the entire stylesheet."
 msgstr ""
-
-msgid ""
-"The various styles for the Bible editor are contained in a stylesheet."
-msgstr ""
-
-msgid "The stylesheet you are currently using is:"
-msgstr ""
-
-msgid "switch"
-msgstr "cambiar"
 
 msgid "Category"
 msgstr "Categoría"
@@ -10969,3 +10965,6 @@ msgstr ""
 
 msgid "Username or email address or password are not correct"
 msgstr ""
+
+#~ msgid "switch"
+#~ msgstr "cambiar"
