--- a/locale/it.po
+++ b/locale/it.po
@@ -619,6 +619,15 @@ msgstr ""
 msgid "The journal shows the progress."
 msgstr ""
 
+msgid "Would you like to change the stylesheet?"
+msgstr ""
+
+msgid "A stylesheet affects how the Bible text in the editor looks."
+msgstr ""
+
+msgid "Please make your choice below."
+msgstr ""
+
 msgid "More operations in the Cloud"
 msgstr ""
 
@@ -1536,12 +1545,6 @@ msgstr "Dopo tutto il resto"
 msgid "Upon encountering a certain marker"
 msgstr ""
 
-msgid "Styles"
-msgstr "Stili"
-
-msgid "Would you like to switch to another stylesheet?"
-msgstr "Vorresti passare a un altro foglio di stile?"
-
 msgid "Style"
 msgstr ""
 
@@ -1670,6 +1673,9 @@ msgstr ""
 
 msgid "The marker is to be given without the backslash, e.g. \"zendnotes\"."
 msgstr ""
+
+msgid "Styles"
+msgstr "Stili"
 
 msgid "This stylesheet already exists"
 msgstr ""
@@ -2051,9 +2057,6 @@ msgstr ""
 msgid "User-defined"
 msgstr ""
 
-msgid "Select stylesheet"
-msgstr ""
-
 msgid "Help and About"
 msgstr ""
 
@@ -2076,6 +2079,9 @@ msgid "Users"
 msgstr "Utenti"
 
 msgid "Versifications"
+msgstr ""
+
+msgid "Select stylesheet"
 msgstr ""
 
 msgid "Edit stylesheet"
@@ -3702,16 +3708,6 @@ msgid "Select this stylesheet."
 msgstr ""
 
 msgid "Delete the entire stylesheet."
-msgstr ""
-
-msgid ""
-"The various styles for the Bible editor are contained in a stylesheet."
-msgstr ""
-
-msgid "The stylesheet you are currently using is:"
-msgstr ""
-
-msgid "switch"
 msgstr ""
 
 msgid "Category"
@@ -10972,3 +10968,6 @@ msgstr "Benvenuto! Il tuo account ora è attivo."
 
 msgid "Username or email address or password are not correct"
 msgstr "Il nome utene, l'indirizzo mail o la password non sono corretti"
+
+#~ msgid "Would you like to switch to another stylesheet?"
+#~ msgstr "Vorresti passare a un altro foglio di stile?"
