--- a/locale/fr.po
+++ b/locale/fr.po
@@ -7,13 +7,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: bibledit\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"PO-Revision-Date: 2018-01-08 10:23+0000\n"
+"PO-Revision-Date: 2018-01-12 09:56+0000\n"
 "Last-Translator: L'Africain <Unknown>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Launchpad (build 18521)\n"
+"X-Generator: Launchpad (build 18532)\n"
 
 msgid "Has been sending and receiving during the past hour"
 msgstr "A fait l'envoi et la réception au cours de la dernière heure"
@@ -651,13 +651,15 @@ msgid "The journal shows the progress."
 msgstr "Le journal montre la progression."
 
 msgid "Would you like to change the stylesheet?"
-msgstr ""
+msgstr "Souhaitez-vous modifier la feuille de style ?"
 
 msgid "A stylesheet affects how the Bible text in the editor looks."
 msgstr ""
+"Une feuille de style affecte la présentation du texte de la Bible dans "
+"l'éditeur."
 
 msgid "Please make your choice below."
-msgstr ""
+msgstr "Veuillez faire votre choix ci-dessous."
 
 msgid "More operations in the Cloud"
 msgstr "Plus d'opération sur le nuage"
@@ -880,10 +882,10 @@ msgstr ""
 "citation non fermée avec un guillemet fermant (»)."
 
 msgid "The paragraph contains more left guillements than needed"
-msgstr ""
+msgstr "Le paragraphe contient plus de guillemets gauche que nécessaire"
 
 msgid "The paragraph contains more right guillements than needed"
-msgstr ""
+msgstr "Le paragraphe contient plus de guillemets droit que nécessaire"
 
 msgid "Patterns"
 msgstr "Motifs"
